--- a/readme
+++ b/readme
@@ -16,7 +16,10 @@ stores the embeddings and allows quick similarity search
 
 3.Mistral LLM model 
 
-###Flow:
+Flow:
 user asks question-> convert query to embedding-> use FAISS to find most similar document chunks -> send those chunks and user's question document to LLM(Mistral) for answering
 
 After getting question, and question is converted to embedding, FAISS used to find relevant document, then mistral generates answer based on that question
+
+
+**Don't forget to add .env file with HF_TOKEN variable.**
